--- a/00.ipynb
+++ b/00.ipynb
@@ -2161,7 +2161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2.97 ms\n"
+      "Wall time: 4 ms\n"
      ]
     }
    ],
@@ -2492,7 +2492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2.97 ms\n"
+      "Wall time: 3 ms\n"
      ]
     }
    ],
@@ -2554,12 +2554,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "class stFlag(object):\n",
-    "    def __init__(self,point1,point2, outer_stFlag=None):\n",
+    "    def __init__(self,point1,point2):\n",
     "        self.status = 0\n",
     "        measure_flag = 0\n",
     "        self.drt = point1[1]\n",
@@ -2575,10 +2575,8 @@
     "        else:\n",
     "            self.ctL = point2[0]\n",
     "            self.ctH = None\n",
-    "        self.outRange = None\n",
-    "        if outer_stFlag is not None:\n",
-    "            self.outRange = outer_stFlag    # [H,L]\n",
     "        self.startP = point1\n",
+    "        self.stEndP = point2\n",
     "        self.endP = point2\n",
     "        #self.list_P = [point1,point2]\n",
     "    \n",
@@ -2611,7 +2609,7 @@
     "                    self.endP = point\n",
     "                    self.updateCt(point)\n",
     "                    self.status = 1\n",
-    "                    return 'update', None\n",
+    "                    return 'update', 0\n",
     "            elif status == 1:\n",
     "                if (((self.drt == 1) & (point[0] <= self.destroyV))|\n",
     "                   ((self.drt == -1) & (point[0] >= self.destroyV))):\n",
@@ -2620,13 +2618,13 @@
     "                   ((self.drt == -1) & (point[0] < self.destroyV))):\n",
     "                    self.endP = point\n",
     "                    self.updateCt(point)\n",
-    "                    return 'update', None\n",
+    "                    return 'update', 0\n",
     "        elif point[1] != self.drt:\n",
     "            if (((self.drt == 1) & (point[0] <= self.rangeV))|\n",
     "               ((self.drt == -1) & (point[0] >= self.rangeV))):\n",
     "                self.endP = point\n",
     "                self.updateCt(point)\n",
-    "                return 'update', None\n",
+    "                return 'update', 0\n",
     "            elif (((self.drt == 1) & (point[0] > self.rangeV))|\n",
     "               ((self.drt == -1) & (point[0] < self.rangeV))):\n",
     "                return 'new', stFlag(self.endP, point)\n",
@@ -2653,92 +2651,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Segment(object):\n",
-    "    def __init__(self,point1,point2, outer_stFlag=None):\n",
-    "        self.status = 0\n",
-    "        tmp = stFlag(point1, point2, outer_stFlag)\n",
-    "        self.list_flg = [tmp]\n",
-    "        self.drt = point1[1]\n",
-    "        self.flag_cnt = 0\n",
-    "        self.startP = None\n",
-    "        self.endP = None  # 做连接用的\n",
+    "    def __init__(self,**kw):\n",
+    "        if 'status' not in kw.keys():\n",
+    "            self.status = 0\n",
+    "            tmp = stFlag(kw['point1'], kw['point2'])\n",
+    "            self.list_flg = [tmp]\n",
+    "            self.drt = 0\n",
+    "            self.flag_cnt = 1\n",
+    "            self.startP = None\n",
+    "            self.rangeP = None\n",
+    "            self.endP = None  # 做连接用的\n",
+    "        elif 'point1' not in kw.keys():\n",
+    "            self.status = kw['status']\n",
+    "            self.list_flag = kw['list_flg']\n",
+    "            self.drt = kw['drt']\n",
+    "            self.flag_cnt = kw['flag_cnt']\n",
+    "            self.startP = kw['startP']\n",
+    "            self.rangeP = kw['rangeP']\n",
+    "            self.endP = kw['endP'] \n",
+    "            \n",
+    "        if 'range_outer' in kw.keys():\n",
+    "            self.range_outer = kw['range_outer']\n",
     "        \n",
     "    def update(self, point):\n",
     "        '''\n",
     "        update flg;\n",
-    "        if flg update & measure & drt<> :\n",
-    "            flg_cnt += 1; \n",
-    "            if flg_cnt ==2: >>> new segment                \n",
-    "        if flg update & goon: pass\n",
-    "        if flg new & drt<>: flgL.append; flg_cnt +=1;\n",
-    "        if flg new & drt==: flgL.append; endP; flg_cnt = 0;          \n",
-    "        if flg destroy:\n",
-    "            reinitiate Segment;  >>> destroy\n",
+    "        endP;            \n",
+    "        \n",
+    "        'update':\n",
+    "        meature = 1 & status = 1 & flg_cnt = 2: >>> new\n",
+    "        meature = 1 & status = 0 & flg_cnt = 2: status = 1  >>> update        \n",
+    "        meature = 1 & status = 0 & flg_cnt = 1 & sg.drt = 0: sg.drt;  >>> update\n",
+    "        meature = 1 & status = 0 & flg_cnt = 1 & flg.drt = -sg.drt: >>> destroy\n",
+    "        else: >>> update\n",
+    "        \n",
+    "        'new'/'destroy' | sg.status = 0:\n",
+    "        'destroy' & flg.drt <> sg.drt: >>> destroy\n",
+    "        'destroy' & flg_cnt = 2: rangeP; flg_cnt = 2; >>> update\n",
+    "        'new' & flg.drt <> sg.drt: >>> destroy\n",
+    "        'new' & flg.drt == sg.drt: >>> rangeP; flg_cnt = 2 >>> update\n",
+    "        \n",
+    "        'new'/'destroy' | sg.status = 1:\n",
+    "        flg.drt == sg.drt: \n",
+    "            if 'flg destroy':\n",
+    "                list_flg();list_flg[-1].endP; \n",
+    "            list_flg.append(); rangeP; flg_cnt = 0; >>> update\n",
+    "        flg.drt != sg.drt:\n",
+    "            if 'flg destroy':\n",
+    "                list_flg();list_flg[-1].endP;\n",
+    "            list_flg.append(); flg_cnt +1; >>> update\n",
     "            \n",
     "        Return:\n",
-    "        1. new, newSeg, p_sub_flag\n",
+    "        1. new, dict_newSeg, p_sub_flag\n",
     "        2. update, None, p_sub_flag\n",
-    "        3. destroy, None, p_sub_flag\n",
+    "        3. destroy, dict_newSeg, p_sub_flag\n",
     "        '''\n",
     "        p_sub = 1\n",
     "        newSg = None\n",
     "        ff,tmp = self.list_flg[-1].update(point)\n",
-    "        if ff =='update': tmp = self.list_flg[-1]\n",
-    "        if (ff == 'update'):\n",
-    "            if (tmp.measure_flag == 1) & (tmp.drt != self.drt):\n",
-    "                self.flg_cnt += 1\n",
-    "                if self.flg_cnt == 2:\n",
-    "                    self.endP = self.list_flg[-2].startP\n",
+    "        if ff =='update': \n",
+    "            tmp = self.list_flg[-1]\n",
+    "        self.endP = point\n",
+    "            \n",
+    "        if ff == 'update':\n",
+    "            if ((tmp.measure_flag == 1) & (self.status == 1) \n",
+    "                & (self.flg_cnt == 2)):\n",
+    "                    newSg = self.tail(2)\n",
     "                    sig = 'new'\n",
-    "                    newSg = Segment()\n",
+    "            elif ((tmp.measure_flag == 1) & (self.status == 0) \n",
+    "                & (self.flg_cnt == 2)):\n",
+    "                self.status = 1\n",
+    "                sig = 'update'\n",
+    "            elif ((tmp.measure_flag == 1) & (self.status == 0) \n",
+    "                & (self.flg_cnt == 1) & (sg.drt == 0)):\n",
+    "                sg.drt = sg.startP.drt\n",
+    "                sig = 'update'\n",
+    "            elif ((tmp.measure_flag == 1) & (self.status == 0) \n",
+    "                & (self.flg_cnt == 1) & (sg.startP[1] != tmp.drt)):\n",
+    "                sig = 'destroy'\n",
+    "                newSg = {'status': 0, \n",
+    "                'list_flg': [tmp],\n",
+    "                'drt': tmp.startP[1],\n",
+    "                'flg_cnt':0,\n",
+    "                'startP': tmp.startP,\n",
+    "                'rangeP': tmp.stEndP,\n",
+    "                'endP': tmp.endP}\n",
     "            else:\n",
     "                sig = 'update'\n",
-    "        if ff == 'new':\n",
+    "        if (ff == 'destroy') & (self.status == 0):            \n",
     "            p_sub = 0\n",
     "            if tmp.drt != self.drt:\n",
-    "                self.list_flg.append(tmp)\n",
-    "                self.flg_cnt +=1\n",
+    "                newSg = {'point1':tmp.startP, 'point2': tmp.stEndP}          \n",
+    "                sig = 'destroy'\n",
+    "            elif self.flg_cnt == 2:\n",
+    "                self.rangeP = tmp.stEndP\n",
+    "                self.flg_cnt = 2\n",
     "                sig = 'update'\n",
-    "            elif tmp.drt == self.drt:\n",
-    "                self.list_flg.append(tmp)\n",
-    "                self.endP = tmp.startP\n",
-    "                selg.flg_cnt = 0\n",
-    "                sig = 'update'\n",
-    "        if ff == 'destroy':\n",
-    "            sig == ff\n",
+    "        if (ff == 'new') & (self.status == 0):\n",
     "            p_sub = 0\n",
-    "            newSg = Segment()\n",
-    "        return sig,newSg,p_sub    \n",
+    "            if tmp.drt != self.drt:\n",
+    "                newSg = {'point1':tmp.startP, 'point2': tmp.stEndP}          \n",
+    "                sig = 'destroy'\n",
+    "            elif tmp.drt == self.drt:\n",
+    "                self.rangeP = tmp.stEndP\n",
+    "                self.flg_cnt =2\n",
+    "                sig = 'update'\n",
+    "                \n",
+    "        if self.status == 1:\n",
+    "            if ff == 'destroy':\n",
+    "                self.list_flg.pop()\n",
+    "                self.list_flg[-1].endP = tmp.startP\n",
+    "                self.list_flg.append(tmp)\n",
+    "                if tmp.drt != self.drt:\n",
+    "                    self.flg_cnt += 1\n",
+    "                elif tmp.drt == self.drt:\n",
+    "                    self.rangeP = tmp.stEndP\n",
+    "                    self.flg_cnt = 0\n",
+    "                p_sub = -1\n",
+    "                sig = 'update'\n",
+    "            elif ff =='new':\n",
+    "                p_sub = -1\n",
+    "                self.list_flg.append(tmp)\n",
+    "                if tmp.drt != self.drt:\n",
+    "                    self.flg_cnt += 1\n",
+    "                elif tmp.drt == self.drt:\n",
+    "                    self.rangeP = tmp.stEndP\n",
+    "                    self.flg_cnt = 0  \n",
+    "                p_sub = -1\n",
+    "                sig = 'update'\n",
+    "                \n",
+    "        return sig,newSg, p_sub    \n",
     "\n",
+    "    def tail(self, count):\n",
+    "        newSg = {'status': 1, \n",
+    "                'list_flg': self.list_flag[-count:],\n",
+    "                'drt': self.list_flag[-count].drt,\n",
+    "                'flg_cnt':0,\n",
+    "                'startP': self.list_flag[-count].startP,\n",
+    "                'rangeP': self.list_flag[-1].stEndP,\n",
+    "                'endP': self.endP}\n",
+    "        return newSg\n",
+    "    \n",
     "    def index(self):\n",
     "        return self.list_flg[0].index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-105-b63b246531e9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist_Lv0\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_openSg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[0mff\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtmp\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msub_flag\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mff\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'destroy'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'destroy:sg.status='\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-104-1f8c3fe9aa72>\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(self, point)\u001b[0m\n\u001b[0;32m     57\u001b[0m         \u001b[0mp_sub\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m         \u001b[0mnewSg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 59\u001b[1;33m         \u001b[0mff\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtmp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlist_flg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     60\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mff\u001b[0m \u001b[1;33m==\u001b[0m\u001b[1;34m'update'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m             \u001b[0mtmp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlist_flg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
    "source": [
-    "list_Lv = [SegmentObj]\n",
-    "list_openSg = [[]]\n",
-    "sub_flag = 1\n",
-    "for sg in list_openSg:\n",
-    "    ff,tmp,flag = sg.update(P)\n",
-    "    if ff == 'destroy':\n",
-    "        list_Lv[0]\n",
-    "    if (ff == 'new'):        \n",
-    "        list_Lv.append(tmp)\n",
-    "    if flag == 0:\n",
-    "        sub_flag = 0\n",
-    "if sub_flag == 1:\n",
-    "    list_openSg.append(Segment())\n",
+    "# 起点 list_Lv0\n",
+    "list_Lv1 = [list_Lv0[0]]\n",
+    "pp = {'point1':list_Lv0[0], 'point2':list_Lv0[1]}\n",
+    "list_Lv1_sg = [Segment(**pp)]\n",
+    "list_Lv1_subsg = []\n",
+    "list_openSg = [list_Lv1_sg[0]]\n",
+    "sub_valid_idx = 0\n",
+    "for p in list_Lv0[2:3]:\n",
+    "    for i,sg in enumerate(list_openSg[:]):\n",
+    "        ff,tmp,sub_flag = sg.update(p)\n",
+    "        if ff == 'destroy':\n",
+    "            print('destroy:sg.status=',sg.status)\n",
+    "            list_openSg[i] = Segment(**tmp)\n",
+    "        if ff == 'new':    \n",
+    "            print('new:sg.status=',sg.status,',idx=',p[2])\n",
+    "            list_openSg.append(Segment(**tmp))\n",
+    "            if i == 0:\n",
+    "                #peakP \n",
+    "                list_Lv1_sg.append(list_openSg[-1])\n",
+    "                list_Lv1.append(tmp.startP)\n",
+    "            else:\n",
+    "                list_Lv1_subsg.append(list_openSg[-1])\n",
+    "        if ff == 'update':\n",
+    "            print('new:sg.status=',sg.status,',flg.status=',sg.list_flg[-1].status,',endP:',\n",
+    "                 sg.enP)\n",
+    "        if sub_flag == -1:\n",
+    "            pass\n",
+    "        # 作废 subSg\n",
     "        \n",
-    "    "
+    "    #merge\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-102-cf462dd059f5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m9.91\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m29.0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mff\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtmp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist_openSg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlist_flg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "p = [9.91, -1, 29.0]\n",
+    "ff, tmp = list_openSg[0].list_flg[-1].update(p)\n"
    ]
   },
   {
@@ -3075,7 +3209,7 @@
     "width": "234px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
