--- a/00.ipynb
+++ b/00.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "279"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1962,7 @@
        "2017-12-22 11:00:00     0    4  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2094,7 @@
        "2017-12-22 11:00:00  10.14  10.06    0     1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,14 +2154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 4 ms\n"
+      "Wall time: 3 ms\n"
      ]
     }
    ],
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2277,7 +2277,7 @@
        "4  10.08   9.98 -1.0    5"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2304,7 +2304,7 @@
        "array([10.14, 10.12,  2.  ,  2.  ,  0.  ])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
        "0  10.14  10.12  0.0    0       2       2      0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
        "       [10.16, 10.09]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2485,14 +2485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2 ms\n"
+      "Wall time: 3 ms\n"
      ]
     }
    ],
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
        " [10.02, 1, 480.0]]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2554,33 +2554,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "class stFlag(object):\n",
-    "    def __init__(self,point1,point2):\n",
+    "    def __init__(self,pointL):\n",
     "        self.status = 0\n",
     "        self.measure_flag = 0\n",
-    "        self.drt = point1[1]\n",
-    "        self.startP = point1\n",
-    "        self.stEndP = point2\n",
-    "        self.list_ctP = [point2]\n",
+    "        self.drt = pointL[0][1]\n",
+    "        self.startP = pointL[0]\n",
+    "        self.stEndP = pointL[1]\n",
     "        \n",
-    "        self.stTmS = point1[2]\n",
-    "        self.stTmE = point2[2]\n",
-    "        self.destroyV = point1[0]\n",
-    "        self.rangeV = point2[0]\n",
-    "        self.ctTmS = self.stTmE\n",
+    "        self.list_ctP = []\n",
+    "        self.stTmS = None\n",
+    "        self.stTmE = None\n",
+    "        self.destroyV = None\n",
+    "        self.rangeV = None\n",
+    "        self.ctTmS = None\n",
     "        self.ctTmE = None\n",
-    "        if self.drt == 1:   # Upward Flag\n",
-    "            self.ctH = point2[0]\n",
-    "            self.ctL = None\n",
-    "        else:\n",
-    "            self.ctL = point2[0]\n",
-    "            self.ctH = None\n",
-    "        \n",
-    "        #self.list_P = [point1,point2]\n",
+    "        self.ctH = None\n",
+    "        self.ctL = None\n",
+    "        self.updateFlg(pointL)\n",
     "    \n",
     "    def update(self,point):\n",
     "        '''\n",
@@ -2639,18 +2634,40 @@
     "        return sig, newFlg\n",
     "            \n",
     "    \n",
-    "    def updateCt(self,point):\n",
-    "        self.ctTmE = point[2]\n",
-    "        if self.status == 0:\n",
-    "            if self.drt == 1:\n",
-    "                self.ctL = point[0]\n",
+    "    def updateFlg(self,p):\n",
+    "        if isinstance(p[0],list):\n",
+    "            self.stTmS = p[0][2]\n",
+    "            self.stTmE = p[1][2]\n",
+    "            self.destroyV = p[0][0]\n",
+    "            self.rangeV = p[1][0] \n",
+    "            self.list_ctP = p[2:]\n",
+    "            if len(p) == 2:  # 只有init时会输入双点\n",
+    "                self.ctTmS = p[1][2]\n",
+    "                self.ctTmE = None\n",
+    "                if self.drt == 1:\n",
+    "                    self.ctH = p[1][0]\n",
+    "                if self.drt == -1:\n",
+    "                    self.ctL = p[1][0]\n",
+    "            else:            # 只有init时会输入多点\n",
+    "                self.ctTmS = p[1][2]\n",
+    "                self.ctTmE = p[-1][2]\n",
+    "                HL = [pp[0] for pp in p[2:] if pp[1] == -1]\n",
+    "                LL = [pp[0] for pp in p[2:] if pp[1] == 1]\n",
+    "                self.ctL = np.array(LL).min()\n",
+    "                self.ctH = np.array(HL).max()\n",
+    "        else: # 后续更新都是输入单点\n",
+    "            self.ctTmE = p[2]\n",
+    "            self.list_ctP.append(p)\n",
+    "            if self.status == 0:\n",
+    "                if self.drt == 1:\n",
+    "                    self.ctL = p[0]\n",
+    "                else:\n",
+    "                    self.ctH = p[0]\n",
     "            else:\n",
-    "                self.ctH = point[0]\n",
-    "        else:\n",
-    "            if point[1] == -1:\n",
-    "                self.ctH = min(self.ctH, point[0])\n",
-    "            else:\n",
-    "                self.ctL = max(self.ctL, point[0])\n",
+    "                if point[1] == -1:\n",
+    "                    self.ctH = min(self.ctH, p[0])\n",
+    "                else:\n",
+    "                    self.ctL = max(self.ctL, p[0])\n",
     "        return None\n",
     "        \n",
     "    def index(self):\n",
@@ -2784,18 +2801,21 @@
     "            elif tmp.drt == self.drt:\n",
     "                self.rangeP = tmp.stEndP\n",
     "                self.flg_cnt =2\n",
-    "                self.list_flg.append(tmp)??\n",
+    "                self.list_flg.append(tmp)\n",
     "                sig = 'update'\n",
     "                \n",
     "        if self.status == 1:\n",
     "            if ff == 'destroy':\n",
     "                self.list_flg.pop()\n",
-    "                self.list_flg[-1].endP = tmp.startP\n",
-    "                self.list_flg.append(tmp)\n",
     "                if tmp.drt != self.drt:\n",
-    "                    self.flg_cnt += 1\n",
-    "                    self.list_flg_r = [stFlag(**tmp)]??\n",
+    "                    self.flg_cnt = 1\n",
+    "                    self.list_flg_r = [stFlag([self.list_flg[-1].stEndP, \n",
+    "                                               self.list_flg[-1].list_ctP])]\n",
+    "                    self.list_flg[-1].endP = tmp.startP\n",
+    "                    self.list_flg.append(tmp)\n",
     "                elif tmp.drt == self.drt:\n",
+    "                    self.list_flg[-1].endP = tmp.startP\n",
+    "                    self.list_flg.append(tmp)\n",
     "                    self.rangeP = tmp.stEndP\n",
     "                    self.flg_cnt = 0\n",
     "                p_sub = 0\n",
@@ -3091,31 +3111,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "([10.13, -1, 0],\n",
+       " [9.57, 1, 17.0],\n",
+       " [[9.91, -1, 29.0], [9.73, 1, 34.0], [10.25, -1, 69.0]],\n",
+       " -1,\n",
+       " 10.13,\n",
+       " 9.57,\n",
+       " 9.73,\n",
+       " 10.25,\n",
+       " 0)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_Lv1_sg[0].is_Main"
+    "list_Lv0[0][1] = -list_Lv0[1][1]\n",
+    "ll = list_Lv0[0:5]\n",
+    "flg = stFlag(ll)\n",
+    "flg.startP,flg.stEndP,flg.list_ctP,flg.drt,flg.destroyV, flg.rangeV ,flg.ctL,flg.ctH,flg.measure_flag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9.91, 10.25, 10.03, 9.71, 9.8, 8.67, 9.14, 9.65, 10.97]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ll=['a', 'c', 'b']"
+    "[pp[0] for pp in list_Lv0[2:] if pp[1] == -1]"
    ]
   },
   {
