--- a/tushare_tick_1M.ipynb
+++ b/tushare_tick_1M.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np  \n",
@@ -26,32 +24,352 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pymssql\n",
     "from sqlalchemy import create_engine \n",
-    "engine = create_engine(\"mssql+pymssql://CENTALINE\\zhangyun29:sh.8888@./invest\")\n",
+    "engine = create_engine(\"mssql+pymssql://sa:Pass0330@./invest\")\n",
     "cnx = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1.89 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "df_l = ts.get_stock_basics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3505, 22)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_l.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>area</th>\n",
+       "      <th>pe</th>\n",
+       "      <th>outstanding</th>\n",
+       "      <th>totals</th>\n",
+       "      <th>totalAssets</th>\n",
+       "      <th>liquidAssets</th>\n",
+       "      <th>fixedAssets</th>\n",
+       "      <th>reserved</th>\n",
+       "      <th>...</th>\n",
+       "      <th>bvps</th>\n",
+       "      <th>pb</th>\n",
+       "      <th>timeToMarket</th>\n",
+       "      <th>undp</th>\n",
+       "      <th>perundp</th>\n",
+       "      <th>rev</th>\n",
+       "      <th>profit</th>\n",
+       "      <th>gpr</th>\n",
+       "      <th>npr</th>\n",
+       "      <th>holders</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>code</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>600249</th>\n",
+       "      <td>两面针</td>\n",
+       "      <td>日用化工</td>\n",
+       "      <td>广西</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>323929.22</td>\n",
+       "      <td>99010.27</td>\n",
+       "      <td>114079.5</td>\n",
+       "      <td>85739.86</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>20040130</td>\n",
+       "      <td>11563.82</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>-5.29</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>20.24</td>\n",
+       "      <td>-6.53</td>\n",
+       "      <td>62924.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name industry area   pe  outstanding  totals  totalAssets  \\\n",
+       "code                                                               \n",
+       "600249  两面针     日用化工   广西  0.0          5.5     5.5    323929.22   \n",
+       "\n",
+       "        liquidAssets  fixedAssets  reserved   ...     bvps    pb  \\\n",
+       "code                                          ...                  \n",
+       "600249      99010.27     114079.5  85739.86   ...     3.52  1.83   \n",
+       "\n",
+       "        timeToMarket      undp  perundp   rev  profit    gpr   npr  holders  \n",
+       "code                                                                         \n",
+       "600249      20040130  11563.82     0.21 -5.29    23.7  20.24 -6.53  62924.0  \n",
+       "\n",
+       "[1 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_l.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sql_str = 'SELECT Stock_ID from db_status'\n",
+    "df_exist = pd.read_sql(sql_str,cnx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Stock_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>603890</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Stock_ID\n",
+       "0   603890"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_exist.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = set(df_l.index);\n",
+    "s2 = set(df_exist['Stock_ID'])\n",
+    "new = s1 - s2\n",
+    "len(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new = df_l.loc[new,['name','industry']]\n",
+    "df_new['Stock_ID'] = df_new.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new.to_sql('db_status', cnx, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>Stock_ID</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>code</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>603871</th>\n",
+       "      <td>嘉友国际</td>\n",
+       "      <td>仓储物流</td>\n",
+       "      <td>603871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300739</th>\n",
+       "      <td>明阳电路</td>\n",
+       "      <td>元器件</td>\n",
+       "      <td>300739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300738</th>\n",
+       "      <td>奥飞数据</td>\n",
+       "      <td>电信运营</td>\n",
+       "      <td>300738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300634</th>\n",
+       "      <td>彩讯股份</td>\n",
+       "      <td>软件服务</td>\n",
+       "      <td>300634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300504</th>\n",
+       "      <td>天邑股份</td>\n",
+       "      <td>通信设备</td>\n",
+       "      <td>300504</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name industry Stock_ID\n",
+       "code                          \n",
+       "603871  嘉友国际     仓储物流   603871\n",
+       "300739  明阳电路      元器件   300739\n",
+       "300738  奥飞数据     电信运营   300738\n",
+       "300634  彩讯股份     软件服务   300634\n",
+       "300504  天邑股份     通信设备   300504"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def update_stock_list():\n",
+    "    df_l = ts.get_stock_basics()  # generally use 2s\n",
+    "    time.sleep(5)\n",
+    "    sql_str = 'SELECT Stock_ID from db_status'\n",
+    "    df_exist = pd.read_sql(sql_str,cnx)\n",
+    "    s1 = set(df_l.index);\n",
+    "    s2 = set(df_exist['Stock_ID'])\n",
+    "    new = s1 - s2\n",
+    "    df_new = df_l.loc[new,['name','industry']]\n",
+    "    df_new['Stock_ID'] = df_new.index\n",
+    "    df_new.to_sql('db_status', cnx, if_exists='append', index=False)\n",
+    "    return len(new)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -92,9 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dateStart = '2017-01-01'\n",
@@ -128,9 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "date_col = []\n",
@@ -142,9 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -164,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u_type = []\n",
@@ -179,9 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -219,9 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -241,9 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d['time'] = d['date'] +' '+ d['time']\n",
@@ -253,9 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -971,9 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = d.set_index('time')\n",
@@ -985,9 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "price_df = d['price'].resample('1min').ohlc()\n",
@@ -997,9 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "price_df=price_df.dropna() # 线性填充\n",
@@ -1009,9 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vols=d['volume'].resample('1min').sum() \n",
@@ -1025,9 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = price_df.merge(vol_df,left_index = True,right_index=True).merge(amount_df,left_index = True, right_index=True)"
@@ -1036,9 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df"
@@ -1047,9 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "form_name = 'M1_' + symbol\n",
@@ -1069,9 +1357,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1084,8 +1372,20 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.11"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
